Fix glitch where back button jumped around on load

--- a/src/nih_wayfinding/app/styles/components/_buttons.scss
+++ b/src/nih_wayfinding/app/styles/components/_buttons.scss
@@ -3,7 +3,8 @@
   color: #fff !important;
   font-size: $font-size-h4;
   max-width: 6em;
-  margin-top: -.5rem;
+  height: 8rem;
+  padding-top: 1rem;
   &:hover {
     opacity: .5;
   }
