--- a/src/nih_wayfinding/app/styles/layout/_content.scss
+++ b/src/nih_wayfinding/app/styles/layout/_content.scss
@@ -145,7 +145,8 @@ nav > .btn-group-nav-main {}
 }
 
 .navbar-header {
-  display: inline-block;
+  float: left;
+  display: block;
 }
 
 .icon-content {
