--- a/src/nih_wayfinding/app/styles/layout/_header-footer.scss
+++ b/src/nih_wayfinding/app/styles/layout/_header-footer.scss
@@ -40,6 +40,7 @@ footer {
     color: #fff;
     padding: 2.7rem 0 2rem;
     margin-bottom: 0;
+    min-height: 8rem;
 }
 
 .navbar-actionheader-subtitle {
